--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -3,11 +3,11 @@
 </head>
 <body>
 
-<h1>CAD to others</h1>
+<p>CAD to others</p>
 <!-- START CODE Attention! Do not modify this code; --><script>var fm = "CAD";var to = "GBP,EUR,USD,INR";var tz = "-5";var sz = "1x238";var lg = "en";var st = "success";var cd = 1;var am = 100</script><script src="//currencyrate.today/exchangerates"></script><div style="text-align:right"><a href="https://currencyrate.today">CurrencyRate</a></div><!-- Attention! Do not modify this code; END CODE -->
 
   
-<h1>USD to Others</h1>
+<p>USD to Others</p>
  
 <!-- START CODE Attention! Do not modify this code; --><script>var fm = "USD";var to = "GBP,EUR,INR,CAD";var tz = "-5";var sz = "1x238";var lg = "en";var st = "success";var cd = 1;var am = 100</script><script src="//currencyrate.today/exchangerates"></script><div style="text-align:right"><a href="https://currencyrate.today">CurrencyRate</a></div><!-- Attention! Do not modify this code; END CODE -->
 
